tests/testcrate/tests/ui/methods.stderr
error[E0599]: no method named `year` found for type `tql::i32` in the current scope
  --> $DIR/methods.rs:54:33
   |
54 |     sql!(Table.filter(i32_field.year() == 2015));
   |                                 ^^^^

error[E0599]: no method named `test` found for type `tql::DateTime` in the current scope
  --> $DIR/methods.rs:57:28
   |
57 |     sql!(Table.filter(date.test() == 2015));
   |                            ^^^^

error[E0599]: no method named `yar` found for type `tql::DateTime` in the current scope
  --> $DIR/methods.rs:60:28
   |
60 |     sql!(Table.filter(date.yar() == 2015));
   |                            ^^^ help: did you mean: `year`

error[E0609]: no field `dte` on type `Table`
  --> $DIR/methods.rs:64:23
   |
64 |     sql!(Table.filter(dte.year() == 2015));
   |                       ^^^ help: a field with a similar name exists: `date`

error[E0308]: mismatched types
  --> $DIR/methods.rs:68:23
   |
68 |     sql!(Table.filter(date.year()));
   |                       ^^^^^^^^^^^ expected bool, found i32

error[E0308]: mismatched types
  --> $DIR/methods.rs:74:40
   |
74 |     sql!(Table.filter(field1.ends_with(1) == true));
   |                                        ^ expected &str, found integer
   |
   = note: expected type `&str`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/methods.rs:80:39
   |
80 |     sql!(Table.filter(field1.len() == "test"));
   |                                       ^^^^^^ expected usize, found reference
   |
   = note: expected type `usize`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/methods.rs:86:23
   |
86 |     sql!(Table.filter(field1.len()));
   |                       ^^^^^^^^^^^^ expected bool, found usize

error[E0308]: mismatched types
  --> $DIR/methods.rs:92:23
   |
92 |     sql!(Table.filter(field1.len() && option_field.is_some()));
   |                       ^^^^^^^^^^^^ expected bool, found usize

error: aborting due to 9 previous errors

Some errors occurred: E0308, E0599, E0609.
For more information about an error, try `rustc --explain E0308`.
